[gd_scene format=3 uid="uid://ct8m2fb6xexq3"]

[ext_resource type="Script" uid="uid://d0cm7a802pcnl" path="res://Scripts/Player/Player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://6pkyqymhud61" path="res://Assets/Cassie.png" id="2_i3pqv"]
[ext_resource type="Script" uid="uid://djxfu5qvl7qj8" path="res://Scripts/StateMachine/StateMachine.gd" id="3_vgqql"]
[ext_resource type="Script" uid="uid://b8u6nntcj1jth" path="res://Scripts/Player/state_idle.gd" id="4_fkybt"]
[ext_resource type="Script" uid="uid://qm8odr4pg024" path="res://Scripts/Player/state_falling.gd" id="5_fkybt"]
[ext_resource type="Script" uid="uid://cqbs8amtxbycm" path="res://Scripts/Player/state_jumping.gd" id="6_x3wgy"]
[ext_resource type="Script" uid="uid://clh6mlvx823js" path="res://Scripts/Player/state_running.gd" id="7_3smsa"]
[ext_resource type="Script" uid="uid://dx8l4qlivm342" path="res://Scripts/Player/state_hanging.gd" id="8_8erm5"]
[ext_resource type="Script" uid="uid://cpy328nhuh6r5" path="res://Scripts/Player/player_state_ledge_climb.gd" id="9_f1ek2"]
[ext_resource type="Script" uid="uid://dbiu7u18cmh3l" path="res://Scripts/Player/state_vaulting.gd" id="10_tx1dd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t21ke"]
radius = 7.0
height = 54.0

[sub_resource type="Animation" id="Animation_6t5aa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(16, 0, 32, 64)]
}

[sub_resource type="Animation" id="Animation_cvnsp"]
resource_name = "idle"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(16, 0, 32, 64), Rect2(80, 0, 32, 64)]
}

[sub_resource type="Animation" id="Animation_tx1dd"]
resource_name = "looking"
length = 2.6333334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6666666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(144, 0, 32, 64), Rect2(16, 0, 32, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgqql"]
_data = {
&"RESET": SubResource("Animation_6t5aa"),
&"idle": SubResource("Animation_cvnsp"),
&"looking": SubResource("Animation_tx1dd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1ek2"]
size = Vector2(20, 0.5)

[node name="Player" type="CharacterBody2D" unique_id=1465244204]
script = ExtResource("1_onrkg")

[node name="Camera2D" type="Camera2D" parent="." unique_id=430168681]
position = Vector2(1, -110)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1923885018]
texture_filter = 1
position = Vector2(-16, -64)
texture = ExtResource("2_i3pqv")
centered = false
region_enabled = true
region_rect = Rect2(16, 0, 32, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=796501931]
position = Vector2(0, -27)
shape = SubResource("CapsuleShape2D_t21ke")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2117596886]
libraries/ = SubResource("AnimationLibrary_vgqql")
autoplay = &"idle"

[node name="StateLabel" type="Label" parent="." unique_id=969111457]
offset_left = -13.0
offset_top = -72.0
offset_right = 12.0
offset_bottom = -58.0
theme_override_font_sizes/font_size = 10
text = "State"
metadata/_edit_use_anchors_ = true

[node name="LedgeGrab" type="RayCast2D" parent="." unique_id=1667404617]
position = Vector2(0, -57)
target_position = Vector2(10, 0)

[node name="AboveHead" type="RayCast2D" parent="." unique_id=1295450292]
position = Vector2(0, -61)
target_position = Vector2(10, 0)

[node name="AboveVaultGrab" type="RayCast2D" parent="." unique_id=1375646486]
position = Vector2(1, -32)
target_position = Vector2(10, 0)

[node name="VaultingGrab" type="RayCast2D" parent="." unique_id=1214757903]
position = Vector2(1, -25)
target_position = Vector2(10, 0)

[node name="groundRayCast" type="ShapeCast2D" parent="." unique_id=372000063]
position = Vector2(0, -5.9604645e-08)
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_f1ek2")
target_position = Vector2(0, 0)

[node name="StateMachine" type="Node" parent="." unique_id=1000647080 node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_vgqql")
initial_state = NodePath("IDLE")
metadata/_custom_type_script = "uid://djxfu5qvl7qj8"

[node name="IDLE" type="Node" parent="StateMachine" unique_id=240811455]
script = ExtResource("4_fkybt")
metadata/_custom_type_script = "uid://cdc14a4nhq1dr"

[node name="FALLING" type="Node" parent="StateMachine" unique_id=1642301818]
script = ExtResource("5_fkybt")
metadata/_custom_type_script = "uid://0afpixb8js2h"

[node name="JUMPING" type="Node" parent="StateMachine" unique_id=1680415345]
script = ExtResource("6_x3wgy")
metadata/_custom_type_script = "uid://0afpixb8js2h"

[node name="RUNNING" type="Node" parent="StateMachine" unique_id=1277343154]
script = ExtResource("7_3smsa")
metadata/_custom_type_script = "uid://0afpixb8js2h"

[node name="HANGING" type="Node" parent="StateMachine" unique_id=1824490531]
script = ExtResource("8_8erm5")
metadata/_custom_type_script = "uid://0afpixb8js2h"

[node name="VAULTING" type="Node" parent="StateMachine" unique_id=280735588]
script = ExtResource("10_tx1dd")
metadata/_custom_type_script = "uid://0afpixb8js2h"

[node name="LEDGE_CLIMB" type="Node" parent="StateMachine" unique_id=2017393987]
script = ExtResource("9_f1ek2")
metadata/_custom_type_script = "uid://0afpixb8js2h"
